--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="search">Поиск</string>
+    <string name="add_recipe">Добавьте рецепт</string>
+    <string name="cancel_filters">Сбросить фильтр</string>
 </resources>
