--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,14 @@
     <string name="menu_edit">Изменить</string>
     <string name="avatar_description">Avatar description</string>
     <string name="description_post_menu">Post menu</string>
+    <string name="title">Title</string>
+    <string name="content_hint">Content</string>
+    <string name="european_type">Европейский</string>
+    <string name="asian_type">Азиатский</string>
+    <string name="eastern_type">Восточный</string>
+    <string name="russian_type">Русская</string>
+    <string name="american_type">Американская</string>
+    <string name="recipe_save">Сохранить рецепт</string>
+    <string name="recipeContent">Пельмени – знаменитое блюдо русской кухни, имеющее древние китайские, финно-угорские, тюркские и славянские корни.</string>
+    <string name="text_empty_list">Здесь ничего нет</string>
 </resources>
